--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <li>completed three NPTEL courses with Elite certification, specially Achieved <b>Silver medal</b> in the title of "Problem Solving through Programming in C".</li>
           <li>Technically strong in <b>C, Java, Python, JavaScript, Html, Php, Css, Sql database's.</b></li>
           <li>Attended Two workshops based on "Internet of things" by V.S.B Engineering College and Jai Shriram Engineering College.</li>
-          <li>Team player and have an ability for handle team members.</li>
-          <li> Critical thinking and Motivate myself with my team members for done our jobs.</li>
+          <li>Team player and have an ability to handle team members.</li>
+          <li>Critical thinking and Motivate myself with my team members for done our jobs.</li>
         </ul>
     </div>
 
@@ -99,11 +99,11 @@
       <ul id="m-differ" style="margin:5rem 0px 0px 0px;">
         <li>First of all, I have a skillset on <b>backend development, frontend development and Problem solving through programming.</b></li>
         <li>Experiance on successfully developing an project associated with Barani Hydrolics India Private Limited.</li>
-        <li>Team player so easily encage with your organization.</li>
+        <li>Team player so easily engage with your organization.</li>
         <li>Handle different types of peoples and resolving their problems with my knowledge.</li>
         <li>Interested to learn current technologies (Self Learner).</li>
         <li>Perform multitasking for reduce dependency.</li>
-        <li>Put high effort to performing best in that role.</li>
+        <li>Put high effort to perform best in that role.</li>
       </ul>
   </div>
 
